--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,7 +19,7 @@
   --login: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
   --color1: #E63946;
   --color1b: rgba(11, 36, 27, 0.4);
-  --color2: #4dc3a4;
+  --color2: #ec5e6a;
   --color3: #949494;
   --text: #ffffff;
   --text-link: #5f6a70;
